--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -374,6 +374,7 @@
                 </LinearLayout>
 
                 <Button
+                    android:id="@+id/upgrade_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
