--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -67,6 +67,7 @@
                         android:layout_height="wrap_content">
 
                         <RelativeLayout
+                            android:id="@+id/edit_text_lay"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
@@ -81,15 +82,15 @@
                                 android:hint="Añade un comentario"
                                 android:imeOptions="actionSend"
                                 android:inputType="text" /-->
-                            <com.gsconrad.richcontentedittext.RichContentEditText
+                            <!--EditText
                                 android:id="@+id/edit_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="Añade un comentario"
                                 android:inputType="text"
-                                app:allowedMimeTypes="images" />
+                                /-->
 
-                            <ImageButton
+                            <!--ImageButton
                                 android:id="@+id/send_comment"
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
@@ -100,11 +101,19 @@
                                 android:layout_marginEnd="@dimen/margin_5dp"
                                 android:layout_marginBottom="@dimen/margin_5dp"
                                 android:background="@color/colorDarkGrayCardBackground"
-                                android:src="@drawable/send_arrow_icon" />
+                                android:src="@drawable/send_arrow_icon" /-->
 
                         </RelativeLayout>
 
                     </ScrollView>
+
+                    <TextView
+                        android:id="@+id/textamen"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Añade un comentario"
+                        android:inputType="text"
+                        />
 
 
                 </LinearLayout>
@@ -113,11 +122,16 @@
 
         </androidx.cardview.widget.CardView>
 
-        <WebView
-            android:id="@+id/display_view"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            app:layout_constraintTop_toTopOf="parent" />
+        <!--WebView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/webView"
+            android:layout_gravity="center_horizontal" /-->
+        <ImageView
+            android:id="@+id/imageView"
+            android:contentDescription="GIff"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"/>
 
     </LinearLayout>
 
