--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="colorYellowSwipe">#d9c01c</color>
     <color name="colorDarkGrayCardBackground">#dedfe3</color>
 
-    <color name="colorNotPublished">#21ffae</color>
-    <color name="colorPublished">#00ed1c</color>
+    <color name="colorNotPublished">#ccffd2</color>
+    <color name="colorPublished">#00e31b</color>
 
 </resources>
