--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,5 +17,6 @@
     <dimen name="rate_popup_subtitles_size">15sp</dimen>
     <dimen name="card_view_dimen">1dp</dimen>
     <dimen name="emoji_2dp">2dp</dimen>
+    <dimen name="image_gif_height">200dp</dimen>
 
 </resources>
