--- a/app/src/main/res/layout/add_comment_layout.xml
+++ b/app/src/main/res/layout/add_comment_layout.xml
@@ -69,19 +69,37 @@
                                     android:layout_height="wrap_content"
                                     android:foregroundGravity="center_vertical">
 
-                                    <!--TextView
-                                        android:foregroundGravity="center_vertical"
-                                        android:paddingStart="@dimen/margin_5dp"
-                                        android:gravity="center_vertical"
-                                        android:id="@+id/comment_box"
+                                    <LinearLayout
+                                        android:id="@+id/auxlay"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:hint="@string/add_comment"
-                                        /-->
+                                        android:orientation="vertical">
 
+                                        <LinearLayout
+                                            android:id="@+id/edit_text_gif_layout"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:orientation="vertical">
+
+                                        </LinearLayout>
+
+                                        <EditText
+                                            android:foregroundGravity="center_vertical"
+                                            android:paddingStart="@dimen/margin_5dp"
+                                            android:gravity="center_vertical"
+                                            android:imeOptions="actionSend"
+                                            android:id="@+id/comment_box"
+                                            android:singleLine="true"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:hint="@string/add_comment"
+                                            />
+
+                                    </LinearLayout>
                                 </ScrollView>
 
                                 <ImageView
+                                    android:foregroundGravity="center_vertical"
                                     android:layout_alignEnd="@+id/scroll_view"
                                     android:id="@+id/send_button"
                                     android:layout_width="wrap_content"
