--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -250,7 +250,8 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginEnd="5dp"
                         android:layout_marginBottom="10dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:animateLayoutChanges="true">
                     </LinearLayout>
 
                     <LinearLayout
