--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -95,7 +95,7 @@
 
             <!-- Facebook -->
             <com.facebook.login.widget.LoginButton
-                android:id="@+id/login_button"
+                android:id="@+id/loginfacebook"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -111,6 +111,15 @@
                 android:textStyle="bold"/>
 
             <!-- Google -->
+            <!--<Button
+                android:id="@+id/login2"
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="-7dp"
+                android:layout_marginEnd="-7dp"/>-->
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/logingoogle"
                 android:layout_width="match_parent"
