--- a/app/src/main/res/layout/fragment_reading.xml
+++ b/app/src/main/res/layout/fragment_reading.xml
@@ -22,25 +22,6 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/any_book_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:visibility="invisible">
-
-                    <TextView
-                        android:id="@+id/any_book_text"
-                        style="@style/TextAppearance.AppCompat.Body1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="5dp"
-                        android:text="@string/any_book_yet"
-                        />
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/reading_text_layout"
@@ -124,7 +105,7 @@
                 <LinearLayout
                     android:id="@+id/discover_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -137,16 +118,52 @@
                         card_view:cardBackgroundColor="@color/colorGrayCardBackground"
                         card_view:cardCornerRadius="4dp">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|center_horizontal"
-                            android:gravity="center_horizontal|center_vertical"
-                            android:text="@string/discover_link"
-                            android:textColor="@color/colorBlueLink" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:id="@+id/any_book_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:layout_gravity="center_horizontal|center_vertical"
+                                android:visibility="invisible">
+
+                                <TextView
+                                    android:id="@+id/any_book_text"
+                                    style="@style/TextAppearance.AppCompat.Body1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal"
+                                    android:layout_marginStart="5dp"
+                                    android:layout_marginTop="5dp"
+                                    android:text="@string/any_book_yet"
+                                    />
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="400dp"
+                                    android:gravity="center_horizontal"
+                                    android:src="@drawable/empty11"/>
+
+                            </LinearLayout>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical|center_horizontal"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="@string/discover_link"
+                                android:textColor="@color/colorBlueLink" />
+
+                        </LinearLayout>
+
                     </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
+
 
                 <LinearLayout
                     android:id="@+id/empty_layout"
